# ai-dsl

./: .gitignore  README.en.md  README.md  package-lock.json  package.json  pyproject.toml
benchmarks/: aggressive_torch_cnn.aidl  aggressive_torch_cnn.py  aggressive_torch_cnn_ungrouped.aidl  cnn_cpu_10steps.aidl  cnn_cpu_10steps.py  execution_prompt.txt  medium_task.aidl  medium_task.py  medium_task_prompt.txt  pattern_candidates.json  small_task.aidl  small_task.py  statement_savings_cases.json  task_prompt.txt  torch_cnn_cpu_10steps.aidl  torch_cnn_cpu_10steps.py
docs/: llm_serving_pattern_mining.md  paper_draft_zh.md  python_compression_analysis.md  python_pattern_mining.md  statement_token_savings.md  tutorial_zh.md
examples/: compression_patterns.aidl  fib.aidl  workflow.aidl
scripts/: analyze_patterns.mjs  benchmark_aidl_vs_python.py  benchmark_pipeline.mjs  compare_medium_task.mjs  compare_tokens.mjs  report_statement_savings.mjs
skills/aidl-python-output/: SKILL.md
src/aidsl/: __init__.py  cli.py  compiler.py  cpp_translator.py  frontend.py  python_to_aidl.py  python_translator.py  rules.py
src/aidsl/rules/: python_aidl_rules.json
